--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
         <groupId>org.springframework.boot</groupId>
         <version>2.1.5.RELEASE</version>
     </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -116,7 +123,7 @@
             <version>5.1.9.RELEASE</version>
         </dependency>
 
-        <dependency>
+     <!--   <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.1.5.RELEASE</version>
@@ -130,6 +137,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>2.1.5.RELEASE</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
