--- a/pom.xml
+++ b/pom.xml
@@ -139,4 +139,14 @@
             <version>2.1.5.RELEASE</version>
         </dependency>-->
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.4.RELEASE</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
