--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ##端口号
-server.port=82
+server.port=80
 
 
 ##检查 mybatis 配置是否存在，一般命名为 mybatis-config.xml
@@ -12,10 +12,10 @@ mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 logging.level.com.project.dao=debug
 
 ##数据库url
-spring.datasource.url=jdbc:mysql://localhost:3306/project?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://123.56.134.30:3306/project?characterEncoding=utf8&useSSL=false
 ##数据库用户名
 spring.datasource.username=root
 ##数据库密码
-spring.datasource.password=123456
+spring.datasource.password=nurxat18903
 ##数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
