--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 logging.level.com.project.dao=debug
 
 ##数据库url
-spring.datasource.url=jdbc:mysql://${db.host:123.56.134.30}:3306/project?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/project?characterEncoding=utf8&useSSL=false
 ##数据库用户名
 spring.datasource.username=root
 ##数据库密码
