--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.username=root
 spring.datasource.password=${db.password:nurxat18903}
 ##数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.transaction.rollback-on-commit-failure=true
