权限管理(部分)

--- a/pom.xml
+++ b/pom.xml
@@ -123,21 +123,35 @@
             <version>5.1.9.RELEASE</version>
         </dependency>
 
-     <!--   <dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>2.1.5.RELEASE</version>
+            <version>2.0.5.RELEASE</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>2.0.5.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>2.3.5.RELEASE</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.5.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.1.5.RELEASE</version>
-        </dependency>-->
+
+        <!--  <dependency>
+           <groupId>org.springframework.security.oauth</groupId>
+           <artifactId>spring-security-oauth2</artifactId>
+           <version>2.3.5.RELEASE</version>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-thymeleaf</artifactId>
+           <version>2.1.5.RELEASE</version>
+       </dependency>-->
     </dependencies>
     <build>
         <plugins>
