--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,17 @@
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
            <version>2.1.5.RELEASE</version>
        </dependency>-->
+        <!--二维码工具-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
