--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.project.publicNo</groupId>
     <artifactId>publicNo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
