--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 ## mapper xml 文件地址
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 ##日志级别
-logging.level.com.project.dao=debug
+logging.level.com.project.publicNo.dao=debug
 
 ##数据库url
 spring.datasource.url=jdbc:mysql://localhost:3306/project?characterEncoding=utf8&useSSL=false
